Closed Bug 1951407 Opened 14 days ago Closed 13 days ago

Firefox crashes if restarted or closed during the agent scan

Categories

(Firefox :: Data Loss Prevention, defect, P2)

Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox136 --- unaffected
firefox137 --- disabled
firefox138 --- verified

People

(Reporter: atrif, Assigned: gstoll)

References

(Blocks 2 open bugs, Regression)

Details

(Keywords: regression, Whiteboard: [fidefe-quality-foundation?])

Crash Data

Attachments

(2 files)

Attached image dlp_crash_exit.gif

Found in

  • 137.0a1 (20250227215252)

Affected versions

  • 137.0a1 (20250227215252)

Tested platforms

  • Affected platforms: Windows 10x64, Windows 11
  • Unaffected platforms: Ubuntu 24, macOS

Preconditions

  • Download the DLP test assets from https://drive.google.com/file/d/1yjqVRuxdKV3WnO7D2wzMgDXBuYBxUgVw/view
  • Create a distribution folder inside the Firefox folder and paste the policies-1.json to it and then rename it to policies.json
  • DLP Agent is running: .\content_analysis_sdk_agent.exe --user --toblock=.*\d{3}-?\d{2}-?\d{4}.* --towarn=.*warn.* --delays=10

Steps to reproduce

  1. Open Firefox and perform clipboard paste.
  2. Quit Firefox or restart it from about:profiles.

Expected result

  • No crash.

Actual result

  • Firefox crashes.

Regression range

Additional notes

  • Attached a screen recording.
  • This may be the same as bug 1950858 but since they had different signatures I filled another one. Please duplicate them if they are the same. Thank you!
  • Even if this may be an edge case I will mark it as high impact because of being a recent crash regression. Also, we don't know if this crash may occur in other situations.
QA Whiteboard: [QA-2409]
See Also: → 1950858

I suspect these are the same, but thanks for making this a separate bug! Going to take a look.

Assignee: nobody → gstoll
Status: NEW → ASSIGNED

The problem was that if we're shutting down, things like
NS_DispatchBackgroundTask can start to fail, so handle that case and
reject the promise so we don't hit an assert when it gets destroyed.

Pushed by gstoll@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a422db28c3d3 don't crash if quitting during a Content Analysis scan r=dlp-reviewers,handyman
Severity: -- → S3
Priority: -- → P2
Status: ASSIGNED → RESOLVED
Closed: 13 days ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch

Verified fixed with 138.0a1 (2025-03-04) on Windows 10x64 and Windows 11. Firefox no longer crashes if restarted during agent scan.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: