Bug 1951407 - don't crash if quitting during a Content Analysis scan r=dlp-reviewers,handyman

The problem was that if we're shutting down, things like
NS_DispatchBackgroundTask can start to fail, so handle that case and
reject the promise so we don't hit an assert when it gets destroyed.

Differential Revision: https://phabricator.services.mozilla.com/D240188